Fix overflow issue on project description

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -7,7 +7,7 @@ i {
   height: 27em;
   display: block;
   margin-top: 2.5em;
-  margin-bottom: 1em;
+  margin-bottom: -15em;
   text-align: left;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0);
@@ -29,16 +29,18 @@ i {
   width: 100%;
   height: 100%;
   border-radius: 5px 5px 0 0;
-  transition: all 1s ease;
+  transition: all 0.5s ease;
 }
 
 .project-info {
+  max-width: 20em;
+  max-height: 13.5em;
   position: relative;
   color: white;
-  padding: 1em;
+  padding: 5em 1em 1em 1em;
   width: 100%;
   height: 50%;
-  top: -40%;
+  top: -12%;
 }
 
 .project-showcase {
@@ -54,13 +56,23 @@ i {
 
 .project-github {
   font-size: 2em;
+  padding-top: 4em;
   color: white;
   text-decoration: none !important;
   position: absolute;
-  top: 60%;
+  top: 72%;
   left: 60%;
 }
 
 .project-github:hover {
   color: grey;
+}
+
+.project-description {
+  font-size: 0.85em;
+  margin-top: 0.8em;
+}
+
+.project-name {
+  margin-bottom: 0;
 }
